--- a/public/main.css
+++ b/public/main.css
@@ -77,3 +77,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
+
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
